--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,11 +7,29 @@ body {
     text-align: center;
 }
 
+.topnav {
+    background-color: black;
+    padding: 10px 10px;
+}
+
+.topnav a {
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    padding: 15px 20px;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color:lightgray;
+    color: black;
+
+}
+
 #title {
     font-size:3em;
     font-weight: 900;
-    padding-top: 40px;
-    padding-bottom: 5px;
+    padding-top: 20px;
 }
 
 #sub-title {
@@ -26,8 +44,10 @@ body {
 #image {
     padding-top: 40px;
     padding-bottom: 20px;
+    display: block;
     max-width: 100%;
     height: auto;
+    margin: 0 auto;
 }
 
 #img-caption {
