--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -58,7 +58,7 @@ body {
 
 #tribute-info {
     font-size: 20px;
-    text-align: left;
+    text-align: justify;
     padding-left: 80px;
     padding-top: 20px;
     padding-right: 80px;
